[package]
name = "simple_redis"
version = "0.1.0"
edition = "2024"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
dashmap = "6.1.0"
enum_dispatch = "0.3.13"
futures = { version = "0.3.31", default-features = false }
strum = "0.27.2"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "rt", "io-util"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
